# atomic-mail-watcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: atomicmail_watcher.py
tests/: test_atomicmail_watcher.py
